--- a/style.css
+++ b/style.css
@@ -5,18 +5,21 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Oswald', sans-serif;
     font-family: 'Roboto', sans-serif;
-}
-body{
-    background-image: url(/images/banner/banner3.png);
+};bd
+.banner{
+    height: 100vh;
+    width: 100vw;
+    background-image: url(./images/banner/banner3.png);
     background-repeat: no-repeat;
-    background-size:100%;
+    background-size: cover;
+    background-position: center;
 }
 
 /* header style  */
 
 .header-info{
     text-align: end;
-    margin: 300px 400px 0 0;
+    padding: 300px 400px 0 0;
 }
 
 .header-h1{
@@ -36,6 +39,7 @@ body{
     border: none;
     padding: 20px 26px ;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 /* main style */
@@ -88,7 +92,7 @@ body{
 /* part 3 */
 
 .backpart{
-    background-image: url(/images/watch.png);
+    background-image: url(./images/watch.png);
     background-repeat: no-repeat;
     margin: 290px;
    
@@ -96,7 +100,7 @@ body{
 .part3{
   
     background-repeat: no-repeat;
-    background-image: url(/images/gradient1.png);
+    background-image: url(./images/gradient1.png);
     margin: 290px 290px px 0;
     padding: 65px;
 }
@@ -110,6 +114,7 @@ body{
     color: #005FAC;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
 }
 
 /* footer */
@@ -141,4 +146,5 @@ footer{
     background-color: #005FAC;
     color: aliceblue;
     border-radius: 5px ;
+    cursor: pointer;
 }
