--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 header{
     height: 100vh;
     width: 100vw;
-    background-image: url(images/banner/banner3.png);
+    background-image: url(./images/banner/banner3.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
