--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-   
-
-
+    font-family: 'Fredoka One', cursive;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     background-image: url(/images/banner/banner3.png);
@@ -36,3 +36,36 @@ body{
     padding: 20px 26px ;
     border-radius: 10px;
 }
+
+/* main style */
+
+.first-section{
+    display: flex;
+    margin-top: 40rem ;
+    align-items: center;
+    justify-content: center;
+}
+.humen-img{
+    margin: 0 10rem 0 5rem ;
+}
+.failures-head{
+    text-align: start;
+    font-size: 50px;
+    margin: 0 0 30px 0;
+}
+.failures-p{
+    font-size: 16px;
+    line-height: 25px;
+    margin-bottom: 10px;
+    color: B;
+}
+.main-option li {
+    list-style: none;
+    line-height: 25px;
+
+}
+.fa-regular {
+    margin-right: 10px;
+    color: lawngreen;
+}
+
